# g

./: .gitmodules  BLOG.md  Cargo.toml  README.md  TODO.md  done.sh  init.sh
examples/: test-image.rs  test-map1.rs  test-window.rs
games/studies/: social0.py
pyengine/: .gitignore  Cargo.toml  README.md  __init__.py  setup.py
pyengine/src/: lib.rs
pykvasir/: .gitignore  Cargo.toml  README.md  __init__.py
pykvasir/src/: lib.rs
pysteel/: .gitignore  Cargo.toml  README.md  __init__.py  setup.py
pysteel/src/: lib.rs
src/: alsa.rs  android.rs  bmp.rs  channel.rs  directsound.rs  engine.rs  gif.rs  gles20.rs  ios.rs  jpeg.rs  kvasir.rs  layer.rs  lib.rs  linux.rs  macos.rs  maplayer.rs  mixer.rs  pbm.rs  pixel.rs  png.rs  staticlayer.rs  steel.rs  tga.rs  tiff.rs  track.rs  video.rs  web.rs  webaudio.rs  webgl.rs  webp.rs  windows.rs  xbm.rs
src/image/: bmp.rs  gif.rs  jpeg.rs  mod.rs  pbm.rs  png.rs  tga.rs  tiff.rs  webp.rs  xbm.rs
src/opengl45/: context.rs  framebuffer.rs  layer.rs  mod.rs  shader.rs  texture2d.rs
src/rpg/: mod.rs
src/scene/: mod.rs
src/sound/: mod.rs
src/sys/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  web.rs  windows.rs
static/: icons.kra
steel/: Cargo.toml  README.md
studio/: Command.py  MainApp.py  Model.py  README.md
studio/Character/: Character.py  README.md
studio/Graph/: Graph.py  README.md
studio/Level/: Level.py  (+1 more)
tools/sprite/: Cargo.toml
tools/sprite/src/: application.rs  document.rs  editcanvas.rs  grid.rs  layer.rs  main.rs  pixelgrid.rs  selection.rs
try/: 8x8tiles.kra  BLOG.md  notes.txt
(+23 files in other folders)
